--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <input type="password" id="PasswordField2" placeholder="Password" required/>
                 <img src="eye-close.png" alt="" id="eyeIconField2">
             </div>
-            <label for="password">Re-enter Password</label>
+            <label for="password">Confirm Password</label>
             <div class="password">
                 <input type="password" id="PasswordField3" placeholder="Password" required/>
                 <img src="eye-close.png" alt="" id="eyeIconField3">
